<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AboutFragment"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_api_corona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/api_corona"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_link_api_corona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_soure_api_corona"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_api_corona" />

    <TextView
        android:id="@+id/tv_api_hospital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/api_hospitals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_link_api_corona"
        android:paddingTop="16dp"/>

    <TextView
        android:id="@+id/tv_link_api_hospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_source_api_hospital"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_api_hospital" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/developer"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_link_api_hospital" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/photo_developer"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_developer"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginStart="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>